--- a/line-bot-demo-chap/template.yaml
+++ b/line-bot-demo-chap/template.yaml
@@ -3,37 +3,34 @@ Transform: AWS::Serverless-2016-10-31
 Description: >
   line-bot-demo-chap
 
-  Sample SAM Template for line-bot-demo-chap
-
-# More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
 Globals:
   Function:
     Timeout: 3
+    MemorySize: 128
+Parameters: 
+  LineKey: 
+    Type: String
+    Default: youForgotTheKey
+    Description: line access token
 
 Resources:
-  HelloWorldFunction:
-    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
+  LineReplyFunction:
+    Type: AWS::Serverless::Function 
     Properties:
-      CodeUri: hello_world/
-      Handler: app.lambda_handler
+      CodeUri: lineBot/
+      Handler: app.answer
       Runtime: python3.8
+      Environment:
+        Variables:
+          ACCESS_TOKEN: !Ref LineKey
       Events:
-        HelloWorld:
-          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
+        LineReply:
+          Type: Api 
           Properties:
-            Path: /hello
-            Method: get
+            Path: /linereply
+            Method: post
 
 Outputs:
-  # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
-  # Find out more about other implicit resources you can reference within SAM
-  # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
-  HelloWorldApi:
-    Description: "API Gateway endpoint URL for Prod stage for Hello World function"
-    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/hello/"
-  HelloWorldFunction:
-    Description: "Hello World Lambda Function ARN"
-    Value: !GetAtt HelloWorldFunction.Arn
-  HelloWorldFunctionIamRole:
-    Description: "Implicit IAM Role created for Hello World function"
-    Value: !GetAtt HelloWorldFunctionRole.Arn
+  ChatEndpoint:
+    Description: "api endpoint"
+    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/linereply/"
